<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/GhostRiderMaterialTheme"
    tools:context=".Fragment.Fragment_DisbursementInfo">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center"
       android:padding="5dp">

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintElectric"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintFood"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintWater"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintLoan"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/HeaderLabelBlack"
           android:text="@string/sLabelBankAcc"/>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintBankNme"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <Spinner
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/HeaderLabelBlack"
           android:text="@string/sLabelCreditCard"/>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintBankNme"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintAmountLmt"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/sHintUseLenght"
           style="@style/TextInputStyle">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="50"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn_creditAppNext"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sbtnNext"
           style="@style/MaterialButtonAccent"/>

   </LinearLayout>

</ScrollView>